--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="cm_contact_activity_name">CreateModifyContactActivity</string>
     <!-- Strings used for fragments for navigation -->
 
+    <string name="activity_main_search_in_contacts">Search a Contacts</string>
+
     <string name="tab_text_1">List</string>
 
     <string name="tab_text_2">Map</string>
