--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">ContactApp</string>
     <string name="contact_activity_name">ContactActivity</string>
     <string name="cm_contact_activity_name">CreateModifyContactActivity</string>
+    <string name="details_contact_activity_name">DetailsContactActivity</string>
+
     <!-- Strings used for fragments for navigation -->
 
     <string name="activity_main_search_in_contacts">Search a Contacts</string>
